# nhook

./: .env.example  .gitignore  CLAUDE.md  FEATURE_1.md  FEATURE_2.md  FEATURE_3.md  PLAN.md  REFACTOR.md  REVIEW.md  SPEC.md  docker-compose.yml  flake.nix  notion_hook.db  pyproject.toml
.claude/: settings.json
.claude/commands/: commit.md
.claude/hooks/: format-python.sh
docs/: README.md  architecture.md  deployment.md  extending.md  gastos.md  reload.md  testing.md  workflows.md
nix/: docker.nix  shell.nix  uv.nix
src/notion_hook/: __init__.py  app.py  config.py
src/notion_hook/api/: full_reload.py  gastos.py  health.py  relation_relink.py  reload.py  routes.py  travel.py  webhooks.py
src/notion_hook/clients/: notion.py
src/notion_hook/core/: auth.py  database.py  exceptions.py  logging.py  middleware.py  utils.py
src/notion_hook/models/: __init__.py  gastos.py  gastos_aggregates.py  notion_db.py  webhook.py
src/notion_hook/services/: city_resolver.py  gastos_reload.py  notion_reload.py  relation_relink.py
src/notion_hook/workflows/: base.py  (+10 more)
tests/: conftest.py  test_api_full_reload.py  test_api_gastos.py  test_api_reload.py  test_atracciones_sync.py  test_auth.py  test_city_resolver.py  test_cronograma_sync.py  test_database.py  test_gastos_aggregates.py  test_gastos_model.py  test_gastos_reload.py  test_gastos_reload_ciudad.py  test_gastos_sync.py  test_health.py  test_local_db_sync_workflows.py  test_notion_reload.py  test_pasajes_sync.py  test_pasajes_sync.py.bak  test_registry.py  test_relation_relink.py  test_utils.py  test_webhooks.py
